<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightMagentaLowOpacity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/auth_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/fragment_reset_password_please_enter_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_fragment_please_enter_code"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:textSize="@dimen/txt_18" />

        <EditText
            android:id="@+id/fragment_reset_password_edt_txt_code"
            android:layout_marginTop="50dp"
            style="@style/edtTxtResetPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_edt_txt_height_45"
            android:hint="@string/reset_password_fragment_edt_txt_code"/>

        <TextView
            android:id="@+id/fragment_reset_password_please_enter_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_fragment_please_enter_new_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/txt_18" />

        <EditText
            android:id="@+id/fragment_reset_password_edt_txt_password"
            android:layout_marginTop="10dp"
            style="@style/edtTxtResetPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_edt_txt_height_45"
            android:hint="@string/login_fragment_edt_txt_password"/>

        <EditText
            android:id="@+id/fragment_reset_password_edt_txt_password_confirm"
            android:layout_marginTop="20dp"
            style="@style/edtTxtResetPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_edt_txt_height_45"
            android:hint="@string/register_res_step_1_fragment_edt_txt_confirm_password"/>
        <Button
            android:id="@+id/fragment_reset_password_btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BtnSplash"
            android:layout_marginTop="50dp"
            android:layout_marginStart="@dimen/dim_btn_login_margin_start_50"
            android:layout_marginEnd="@dimen/dim_btn_login_margin_start_50"
            android:text="@string/forget_password_fragment_btn_send"/>

    </LinearLayout>
</RelativeLayout>
