<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightMagentaLowOpacity"


    tools:context=".view.fragment.authcycle.general.LoginFragment">
    <ProgressBar
        android:id="@+id/fragment_login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.3"/>

    <ImageView
        android:id="@+id/fragment_login_img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scaleType="centerCrop"
        android:src="@drawable/auth_background"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/fragment_login_txt_view_did_you_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGrey"


        app:layout_constraintStart_toStartOf="@id/fragment_login_txt_input_password"
app:layout_constraintTop_toBottomOf="@id/fragment_login_txt_input_password"
        android:text="@string/login_fragment_edt_txt_did_you_forget"/>

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/fragment_login_btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BtnSplash"


        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login_fragment_btn_enter"
        android:layout_marginStart="@dimen/dim_btn_login_margin_start_50"
        android:layout_marginEnd="@dimen/dim_btn_login_margin_start_50"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_txt_input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_edt_txt_height_45"
        app:errorEnabled="true"



        style="@style/txtInputLayout"
        app:layout_constraintBottom_toTopOf="@id/fragment_login_txt_view_did_you_forget"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_txt_input_email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_login_edt_txt_password"
            style="@style/txtInputEdtTxt"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:hint="@string/login_fragment_edt_txt_password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_txt_input_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_edt_txt_height_45"
        app:errorEnabled="true"
android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        style="@style/txtInputLayout"
        app:layout_constraintBottom_toTopOf="@id/fragment_login_txt_input_password"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_txt_view_login"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_login_edt_txt_email"
            style="@style/txtInputEdtTxt"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_mail_outline_white_24dp"
            android:hint="@string/login_fragment_edt_txt_email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fragment_login_txt_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_18"
        app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/login_fragment_txt_view_login"/>

    <TextView
        android:id="@+id/fragment_login_txt_view_you_dont_have_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:background="@color/grey"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/login_fragment_txt_view_you_dont_have_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>