<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightMagentaLowOpacity"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/auth_background"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/fragment_forget_password_please_enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_fragment_please_enter_email"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/txt_18" />

    <EditText
        android:id="@+id/fragment_forget_password_edt_txt_emil"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_edt_txt_height_45"
        android:layout_marginTop="50dp"
        style="@style/edtTxtResetPassword"
        android:hint="@string/login_fragment_edt_txt_email"
        app:layout_constraintTop_toBottomOf="@id/fragment_forget_password_please_enter_email"
       />
    <ProgressBar
        android:id="@+id/fragment_forget_password_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <Button
        android:id="@+id/fragment_forget_password_btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BtnSplash"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/dim_btn_login_margin_start_50"
        android:layout_marginEnd="@dimen/dim_btn_login_margin_start_50"
        app:layout_constraintTop_toBottomOf="@id/fragment_forget_password_edt_txt_emil"
        android:text="@string/forget_password_fragment_btn_send"/>

</androidx.constraintlayout.widget.ConstraintLayout>